@@ -8,7 +8,7 @@
 # (at your option) any later version.
 # Please read the file COPYING, README and AUTHORS for more information.
 #
-# $Id: configure.in,v 1.124 2006/10/02 21:57:13 fw Exp $
+# $Id: configure.in,v 1.125 2006/12/26 16:00:45 alex Exp $
 #
 
 # -- Initialisation --
@@ -143,11 +143,9 @@ AC_CHECK_FUNCS([ \
 
 AC_CHECK_FUNCS(inet_aton isdigit sigaction snprintf vsnprintf strdup strlcpy strlcat)
 
-AC_CHECK_FUNCS(select,[AC_CHECK_HEADERS(sys/select.h)],
-	AC_MSG_ERROR([required function select() is missing!])
-)
-
 # -- Configuration options --
+
+# use syslog?
 
 x_syslog_on=no
 AC_ARG_WITH(syslog,
@@ -174,6 +172,8 @@ if test "$x_syslog_on" = "yes"; then
 	AC_CHECK_HEADERS(syslog.h,,AC_MSG_ERROR([required C header missing!]))
 fi
 
+# use zlib compression?
+
 x_zlib_on=no
 AC_ARG_WITH(zlib,
 	[  --without-zlib          disable zlib compression (autodetected by default)],
@@ -198,8 +198,28 @@ if test "$x_zlib_on" = "yes"; then
 	AC_CHECK_HEADERS(zlib.h,,AC_MSG_ERROR([required C header missing!]))
 fi
 
+# detect which IO API to use:
 
-x_io_backend=select\(\)
+x_io_backend=none
+
+AC_ARG_WITH(select,
+	[  --without-select        disable select IO support (autodetected by default)],
+	[	if test "$withval" != "no"; then
+			if test "$withval" != "yes"; then
+				CFLAGS="-I$withval/include $CFLAGS"
+				CPPFLAGS="-I$withval/include $CPPFLAGS"
+				LDFLAGS="-L$withval/lib $LDFLAGS"
+			fi
+			AC_CHECK_FUNCS(select, x_io_select=yes,
+				AC_MSG_ERROR([Can't enable select IO support!])
+			)
+		fi
+	],
+	[
+		AC_CHECK_FUNCS(select, x_io_select=yes)
+	]
+)
+
 AC_ARG_WITH(poll,
 	[  --without-poll          disable poll support (autodetected by default)],
 	[	if test "$withval" != "no"; then
@@ -209,7 +229,7 @@ AC_ARG_WITH(poll,
 				LDFLAGS="-L$withval/lib $LDFLAGS"
 			fi
 			AC_CHECK_FUNCS(poll, x_io_backend=poll\(\),
-				AC_MSG_ERROR([Can't enable poll support!])
+				AC_MSG_ERROR([Can't enable poll IO support!])
 			)
 		fi
 	],
@@ -218,9 +238,8 @@ AC_ARG_WITH(poll,
 	]
 )
 
-
 AC_ARG_WITH(devpoll,
-	[  --without-devpoll          disable /dev/poll support (autodetected by default)],
+	[  --without-devpoll       disable /dev/poll IO support (autodetected by default)],
 	[	if test "$withval" != "no"; then
 			if test "$withval" != "yes"; then
 				CFLAGS="-I$withval/include $CFLAGS"
@@ -232,31 +251,30 @@ AC_ARG_WITH(devpoll,
 		fi
 	],
 	[
-		AC_CHECK_HEADERS(sys/devpoll.h,x_io_backend=/dev/poll,)
+		AC_CHECK_HEADERS(sys/devpoll.h, x_io_backend=/dev/poll)
 	]
 )
 
 AC_ARG_WITH(epoll,
-	[  --without-epoll         disable epoll support (autodetected by default)],
+	[  --without-epoll         disable epoll IO support (autodetected by default)],
 	[	if test "$withval" != "no"; then
 			if test "$withval" != "yes"; then
 				CFLAGS="-I$withval/include $CFLAGS"
 				CPPFLAGS="-I$withval/include $CPPFLAGS"
 				LDFLAGS="-L$withval/lib $LDFLAGS"
 			fi
-			AC_CHECK_FUNCS(epoll_create, x_io_backend=epoll\(\),
-				AC_MSG_ERROR([Can't enable epoll support!])
+			AC_CHECK_FUNCS(epoll_create, x_io_epoll=yes,
+				AC_MSG_ERROR([Can't enable epoll IO support!])
 			)
 		fi
 	],
 	[
-		AC_CHECK_FUNCS(epoll_create, x_io_backend=epoll\(\))
+		AC_CHECK_FUNCS(epoll_create, x_io_epoll=yes)
 	]
 )
 
-
 AC_ARG_WITH(kqueue,
-	[  --without-kqueue        disable kqueue support (autodetected by default)],
+	[  --without-kqueue        disable kqueue IO support (autodetected by default)],
 	[	if test "$withval" != "no"; then
 			if test "$withval" != "yes"; then
 				CFLAGS="-I$withval/include $CFLAGS"
@@ -264,7 +282,7 @@ AC_ARG_WITH(kqueue,
 				LDFLAGS="-L$withval/lib $LDFLAGS"
 			fi
 			AC_CHECK_FUNCS(kqueue, x_io_backend=kqueue\(\),
-				AC_MSG_ERROR([Can't enable kqueue support!])
+				AC_MSG_ERROR([Can't enable kqueue IO support!])
 			)
 		fi
 	],
@@ -273,6 +291,27 @@ AC_ARG_WITH(kqueue,
 	]
 )
 
+if test "$x_io_epoll" = "yes" -a "$x_io_select" = "yes"; then
+	# when epoll() and select() are available, we'll use both!
+	x_io_backend="epoll(), select()"
+else
+	if test "$x_io_epoll" = "yes"; then
+		# we prefere epoll() if it is available
+		x_io_backend="epoll()"
+	else
+		if test "$x_io_select" = "yes" -a "$x_io_backend" = "none"; then
+			# we'll use select, when available and no "better"
+			# interface has been detected ...
+			x_io_backend="select()"
+		fi
+	fi
+fi
+
+if test "$x_io_backend" = "none"; then
+	AC_MSG_ERROR([No useabe IO API activated/found!?])
+fi
+
+# use TCP wrappers?
 
 x_tcpwrap_on=no
 AC_ARG_WITH(tcp-wrappers,
@@ -302,6 +341,8 @@ int deny_severity = 0;
 		fi
 	]
 )
+
+# include support for "zeroconf"?
 
 x_zeroconf_on=no
 AC_ARG_WITH(zeroconf,
@@ -351,6 +392,8 @@ if test "$x_zeroconf_on" = "howl"; then
 	AC_DEFINE(ZEROCONF, 1)
 fi
 
+# do IDENT requests using libident?
+
 x_identauth_on=no
 AC_ARG_WITH(ident,
 	[  --with-ident            enable "IDENT" ("AUTH") protocol support],
@@ -372,6 +415,8 @@ if test "$x_identauth_on" = "yes"; then
 	AC_CHECK_HEADERS(ident.h,,AC_MSG_ERROR([required C header missing!]))
 fi
 
+# compile in IRC+ protocol support?
+
 x_ircplus_on=yes
 AC_ARG_ENABLE(ircplus,
 	[  --disable-ircplus       disable IRC+ protocol],
@@ -380,6 +425,8 @@ AC_ARG_ENABLE(ircplus,
 if test "$x_ircplus_on" = "yes"; then
 	AC_DEFINE(IRCPLUS, 1)
 fi
+
+# compile in IRC "sniffer"?
 
 x_sniffer_on=no; x_debug_on=no
 AC_ARG_ENABLE(sniffer,
@@ -390,6 +437,8 @@ AC_ARG_ENABLE(sniffer,
 	fi
 )
 
+# enable additional debugging code?
+
 AC_ARG_ENABLE(debug,
 	[  --enable-debug          show additional debug output],
 	if test "$enableval" = "yes"; then x_debug_on=yes; fi
@@ -398,6 +447,8 @@ if test "$x_debug_on" = "yes"; then
 	AC_DEFINE(DEBUG, 1)
 	test "$GCC" = "yes" && CFLAGS="-pedantic $CFLAGS"
 fi
+
+# enable "strict RFC rules"?
 
 x_strict_rfc_on=no
 AC_ARG_ENABLE(strict-rfc,
