@@ -12,6 +12,10 @@
 
 ngIRCd HEAD
 
+  - When using epoll() IO interface, compile in the select() interface as
+    well and fall back to it when epoll() isn't available on runtime.
+  - New configure option "--without-select" to disable select() IO API
+    (even when using epoll(), see above).
   - Added support for IO APIs "poll()" and "/dev/poll".
   - Reorganized internal handling of invite and ban lists.
 
@@ -678,4 +682,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.311 2006/12/17 21:00:30 alex Exp $
+$Id: ChangeLog,v 1.312 2006/12/26 16:00:45 alex Exp $
